--- a/assets/index.html
+++ b/assets/index.html
@@ -41,7 +41,7 @@
             <li><span>Works</span></li>
             <li><span>About</span></li>
             <li><span>Contact</span></li>
-            <li><span>Hire us</span></li>
+            <li><span>Open to Work</span></li>
           </ul>
         </nav>
         <ul class="l-main-content main-content">
@@ -268,7 +268,7 @@
     <li>Works</li>
     <li>About</li>
     <li>Contact</li>
-    <li>Hire us</li>
+    <li>Open to Work</li>
   </ul>
 </div>
 
