--- a/index.html
+++ b/index.html
@@ -136,13 +136,13 @@
                     <p>
                       
                         Summary of your qualifications, experience, and skills - 
-                        <br>• C, C++, DSA,
+                        <br>• C, C++, DSA, Java
                         <br>• Android Development,
                         <br>• IOS Development,
                         <br>• Web Development ,
                         <br>• Dart,
                         <br>• Github,
-                        <br>• Flutter (Beginner)
+                        <br>• Flutter (Intermediate)
                         
                     </p>
                     <style>
